refactor(seguridad): alinear el contexto con la convención hexagonal del proyecto
Reorganiza el contexto seguridad tomando fichas como referencia, y arrastra
los ajustes transversales que ese trabajo dejó al descubierto.

seguridad — puertos y capas
- Los OutputPort dejan de hablar dominio: KeycloakAuthOutputAdapter y
  JwtTokenOutputAdapter devuelven CredencialesProveedor/IdentidadProveedor
  (secondaryport/model/), con sus mappers en infraestructura.
- Se eliminan los VO CredencialesSesion e IdentidadToken: sus validaciones
  eran inalcanzables (los mappers ya aplicaban los valores por defecto) o,
  de alcanzarse, convertían un token válido en un 500.
- ValidacionTokenOutputPort colapsa a extraerIdentidad(...) -> Optional, que
  elimina el doble decode del mismo JWT y el estado intermedio imposible.
- JwtTokenOutputAdapter captura JwtException en vez de Exception: una caída
  del JWK Set hacía pasar por expirada toda sesión válida en lugar de 503.
- ValidacionTokenResult pasa a interfaz sellada (Valida/Invalida), sin nulls.
- Un controller por acción; los cuatro interactors quedan simétricos —
  reciben Command, construyen el dominio con su mapper y delegan.
- ValidarToken gana su Command: la capa web ya no construye TokenDomain.
  Un token en blanco pasa de 422 a 400, que es lo que su OpenAPI ya declaraba.
- Logout idempotente: TIEMPO_VIDA_MIN pasa a 0 y SesionDomain expone
  requiereInvalidacion(). Un token sin exp devolvía 422 en vez de cerrar sesión.
- Migración completa de @Slf4j al puerto AppLogger (16 clases).

Reglas de dominio
- Se eliminan FichasDomainRulesConfig y UsuariosDomainRulesConfig: una regla
  no tiene estado ni dependencias, así que el ValidatorImpl la instancia en
  línea. El @Component queda solo en el validator. Los tests de validator
  pasan a ejercitar las reglas reales: el orden se afirma haciendo fallar dos
  a la vez y comprobando qué excepción gana.

Configuración y arranque
- Los logs de configuración se emiten en ApplicationReadyEve